# tram

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.json  requirements.txt
benchmarks/: CMakeLists.txt  benchmarks.cpp
cmake/: tramConfig.make.in
include/: tram_process.hpp
include/client/: tram_client.hpp
include/server/: remote_child.hpp  remote_client.hpp  remote_parent.hpp  remote_replica.hpp  tram_server.hpp
include/structures/: h_slot_mask.hpp  hm_slot_mask.hpp  l_slot_mask.hpp  m_slot_mask.hpp  v_slot_mask.hpp
include/utils/: datatypes.hpp  tram_parse_config.hpp
lib/: CMakeLists.txt
lib/smcluster/include/: smcluster.hpp
lib/smcluster/include/utils/: logging.hpp  mem_v.hpp  smcluster_parse_config.hpp
lib/smcluster/src/: CMakeLists.txt  conn.cpp  smcluster.cpp
lib/smcluster/src/remote_process/: ops.cpp  recovery.cpp  remote_process.cpp  remote_process.hpp  utils.cpp  utils.hpp  vars_sharing.cpp
lib/smcluster/src/shared_vars/: local_shared_variable.cpp  remote_shared_variable.cpp  shared_variable.cpp
lib/smcluster/src/utils/: logging.cpp  mem_v.cpp  smcluster_parse_config.cpp
plotting/: collect.py  plot.py
resources/: config_DSLab2.json
scripts/: build.sh  generate_config.sh  install_deps.sh  kill.sh  run.sh
scripts/tests/: setup.py
src/: CMakeLists.txt  tram_process.cpp
src/client/: tram_client.cpp
src/server/: failover.cpp  follower.cpp  leader.cpp  remote_child.cpp  remote_client.cpp  remote_parent.cpp  remote_replica.cpp  tram_server.cpp
src/tree/: tree.cpp  tree.hpp
src/utils/: datatypes.cpp  tram_parse_config.cpp
